--- a/webapp/assets/css/myPageNormal/normalPoint.css
+++ b/webapp/assets/css/myPageNormal/normalPoint.css
@@ -156,3 +156,224 @@ form{
 .point_day ul li{
   margin: 20px;
 }
+
+
+
+
+.modal {
+  display: none;
+  position: fixed;
+  justify-content: center;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  font-size: 20px;
+}
+
+.modal-content {
+  position: fixed;
+  top: 25%;
+  left: 40%;
+  background-color: #fff;
+  padding: 20px;
+  border: 1px solid #ccc;
+  width: 400px;
+  text-align: center;
+  border-radius: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content p {
+  margin-bottom: 20px;
+  font-size: 20px;
+}
+.payapi{
+  border: 1px solid black;
+  margin: 5px;
+  height: 40px;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+}
+.charge{
+  border: 1px solid black;
+  margin: 5px;
+  height: 40px;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+}
+.charge_point{
+  display: flex;
+  flex-direction: column;
+  font-size: 16px;
+}
+
+.charge_point li ul{
+  display: flex;
+  flex-direction: row;
+}
+.charge_point li ul li{
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.charge_point li ul :first-child{
+  margin: 5px 10px;
+}
+.charge_point li ul :nth-child(2){
+  margin: 5px 0px;
+  flex: 1;
+  border: 1px solid black;
+  border-radius: 15px;
+}
+.modal-content input{
+  width: 350px;
+  height: 40px;
+  font-size: 16px;
+  text-align: center;
+}
+
+
+#completeBtn {
+  margin: 20px 20px 0px 20px;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  background-color: #001860;
+  color: white;
+  cursor: pointer;
+  justify-content: center;
+  width: 100px;
+}
+
+#deleteBtn {
+  margin: 20px 20px 0px 20px;
+  padding: 10px;
+  border: 2px solid red;
+  border-radius: 10px;
+  background-color: white;
+  color: red;
+  cursor: pointer;
+  justify-content: center;
+  width: 100px;
+}
+
+
+
+
+.modal_history {
+  /* display: none; */
+  position: fixed;
+  justify-content: center;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  font-size: 20px;
+}
+
+.modal-content {
+  position: fixed;
+  top: 25%;
+  left: 40%;
+  background-color: #fff;
+  padding: 20px;
+  border: 1px solid #ccc;
+  width: 400px;
+  text-align: center;
+  border-radius: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content p {
+  margin-bottom: 20px;
+  font-size: 20px;
+}
+
+.payapi {
+  border: 1px solid black;
+  margin: 5px;
+  height: 40px;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+}
+
+.charge {
+  border: 1px solid black;
+  margin: 5px;
+  height: 40px;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+}
+
+.charge_point {
+  display: flex;
+  flex-direction: column;
+  font-size: 16px;
+}
+
+.charge_point li ul {
+  display: flex;
+  flex-direction: row;
+}
+
+.charge_point li ul li {
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.charge_point li ul :first-child {
+  margin: 5px 10px;
+}
+
+.charge_point li ul :nth-child(2) {
+  margin: 5px 0px;
+  flex: 1;
+  border: 1px solid black;
+  border-radius: 15px;
+}
+
+.modal-content input {
+  width: 350px;
+  height: 40px;
+  font-size: 16px;
+  text-align: center;
+}
+
+
+#completeBtn {
+  margin: 20px 20px 0px 20px;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  background-color: #001860;
+  color: white;
+  cursor: pointer;
+  justify-content: center;
+  width: 100px;
+}
+
+#deleteBtn {
+  margin: 20px 20px 0px 20px;
+  padding: 10px;
+  border: 2px solid red;
+  border-radius: 10px;
+  background-color: white;
+  color: red;
+  cursor: pointer;
+  justify-content: center;
+  width: 100px;
+}
