--- a/webapp/assets/css/myPageNormal/normalMatching.css
+++ b/webapp/assets/css/myPageNormal/normalMatching.css
@@ -112,3 +112,49 @@ form{
 .page ul li {
   margin: 10px;
 }
+
+
+.completemodal {
+  display: none;
+  position: fixed;
+  justify-content: center;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.cancelmodal {
+  display: none;
+  position: fixed;
+  justify-content: center;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  position: fixed;
+  top: 0;
+  left: 40%;
+  background-color: #fff;
+  padding: 40px;
+  border: 1px solid #ccc;
+  width: 400px;
+  text-align: center;
+  border-radius: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content button {
+  margin-top: 20px;
+  padding: 10px 30px;
+  border: none;
+  border-radius: 10px;
+  background-color: #1D3266;
+  color: white;
+  cursor: pointer;
+}
