--- a/webapp/assets/css/news/news.css
+++ b/webapp/assets/css/news/news.css
@@ -90,6 +90,7 @@ main {
   /* border: 1px solid black; */
   width: 800px;
   height: 300px;
+  overflow: hidden;
   position: relative;
   margin: auto;
   list-style-type: none;
@@ -98,17 +99,12 @@ main {
 /* 베너 ul */
 .slides {
   display: flex;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  left: 0;
-  /* overflow: hidden; */
+  transition: transform 0.3s ease;
 }
 
 /* 카드 뉴스 */
 .card {
+  border: 1px solid black;
   width: 200px;
   height: 300px;
   background-color: #FFF8EF;
@@ -117,5 +113,14 @@ main {
 
 
 .cardlist{
-  border: 1px solid black;
+  flex: 0 0 auto;
+  width: 200px;       /* 카드 1장 너비 */
+  margin: 0 10px;     /* 카드 사이 간격 */
+  transition: transform 0.3s;
+  transform-origin: center bottom; /* 아래쪽 기준으로 확대 */
+}
+
+.cardlist.active {
+  transform: scale(1.2);
+  z-index: 3;
 }
